<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <View style="@style/blank_view" />

            <TextView
                android:id="@+id/tv_hours"
                style="@style/display_digit_a"
                android:text="@string/default_display_digit" />

            <TextView
                android:id="@+id/tv_hours2"
                style="@style/display_digit"
                android:text="@string/default_display_digit" />

            <TextView
                style="@style/display_digit_text"
                android:text="@string/hours_text" />

            <TextView
                android:id="@+id/tv_minutes"
                style="@style/display_digit_a"
                android:text="@string/default_display_digit" />

            <TextView
                android:id="@+id/tv_minutes2"
                style="@style/display_digit"
                android:text="@string/default_display_digit" />

            <TextView
                style="@style/display_digit_text"
                android:text="@string/minute_text" />

            <TextView
                android:id="@+id/tv_secs"
                style="@style/display_digit_a"
                android:text="@string/default_display_digit" />

            <TextView
                android:id="@+id/tv_secs2"
                style="@style/display_digit"
                android:text="@string/default_display_digit" />

            <TextView
                style="@style/display_digit_text"
                android:text="@string/secs_text" />

            <View style="@style/blank_view" />

            <ImageButton
                android:id="@+id/ib_delete"
                android:layout_width="@dimen/backspace_size"
                android:layout_height="@dimen/backspace_size"
                android:background="@android:color/transparent"
                android:contentDescription="@string/cd_ib_delete"
                android:scaleType="fitXY"
                android:src="@drawable/ic_backspace"
                android:tint="@android:color/darker_gray" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <LinearLayout style="@style/digit_row">

                <Button
                    android:id="@+id/b_digit1"
                    style="@style/button_digit"
                    android:text="@string/digit_1" />

                <Button
                    android:id="@+id/b_digit2"
                    style="@style/button_digit"
                    android:text="@string/digit_2" />

                <Button
                    android:id="@+id/b_digit3"
                    style="@style/button_digit"
                    android:text="@string/digit_3" />
            </LinearLayout>

            <LinearLayout style="@style/digit_row">

                <Button
                    android:id="@+id/b_digit4"
                    style="@style/button_digit"
                    android:text="@string/digit_4" />

                <Button
                    android:id="@+id/b_digit5"
                    style="@style/button_digit"
                    android:text="@string/digit_5" />

                <Button
                    android:id="@+id/b_digit6"
                    style="@style/button_digit"
                    android:text="@string/digit_6" />
            </LinearLayout>

            <LinearLayout style="@style/digit_row">

                <Button
                    android:id="@+id/b_digit7"
                    style="@style/button_digit"
                    android:text="@string/digit_7" />

                <Button
                    android:id="@+id/b_digit8"
                    style="@style/button_digit"
                    android:text="@string/digit_8" />

                <Button
                    android:id="@+id/b_digit9"
                    style="@style/button_digit"
                    android:text="@string/digit_9" />
            </LinearLayout>

            <LinearLayout style="@style/digit_row">

                <View style="@style/blank_view" />

                <Button
                    android:id="@+id/b_digit0"
                    style="@style/button_digit"
                    android:text="@string/digit_0" />

                <View style="@style/blank_view" />
            </LinearLayout>
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="70dp">

            <android.support.design.widget.FloatingActionButton
                android:id="@+id/fab_start_timer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:elevation="6dp"
                android:src="@android:drawable/ic_media_play" />

        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/bottom_bar_height"
        android:background="@color/colorPrimary"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingBottom="5dp"
        android:paddingTop="5dp">

        <TextView
            android:id="@+id/timeRemaining"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:textColor="#fff"
            android:textSize="40sp"
            tools:text="06:45:03" />

        <ImageView
            android:id="@+id/iv_pause_timer"
            style="@style/timer_buttons"
            android:contentDescription="@string/pause_timer_content_description"
            android:src="@drawable/ic_pause_circle" />

        <ImageView
            android:id="@+id/iv_cancel_timer"
            style="@style/timer_buttons"
            android:contentDescription="@string/cancel_timer_content_description"
            android:src="@drawable/ic_cancel_circle" />

    </LinearLayout>
</LinearLayout>

